# src/models/trading-pair.ts
@@ -6,6 +6,7 @@ export interface NewTradingPair {
   buyPrice: number;
   sellPrice: number;
   quantity: number;
+  buyFilled: boolean;
   buyOrderId?: number;
   sellOrderId?: number;
 }
